# notioncli

./: .gitignore  API_COVERAGE.md  BENCHMARKS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/publish-20260324/read/: summary.json
benchmarks/publish-20260324/read/session-01/: current-user.json  fetch-data-source.json  fetch-database.json  fetch-page.json  list-comments.json  list-users-page1.json  search-page.json
benchmarks/publish-20260324/read/session-02/: current-user.json  fetch-data-source.json  fetch-database.json  fetch-page.json  list-comments.json  list-users-page1.json  search-page.json
benchmarks/publish-20260324/write/: summary.json
benchmarks/publish-20260324/write/session-01/: create-comment.json  create-database.json  create-page-under-page.json  create-row-under-data-source.json  update-data-source-title.json  update-page-title.json
benchmarks/publish-20260324/write/session-02/: create-comment.json  create-database.json  create-page-under-page.json  create-row-under-data-source.json  update-data-source-title.json  update-page-title.json
scripts/: bench_case_once.py  bench_cases.comparable.json  bench_cases.readonly.json  bench_cases.readsuite.json  bench_cases.sample.json  bench_cases.writesuite.json  bench_cleanup_comparable.py  bench_cleanup_fixture.py  bench_compare.py  bench_prepare_comparable.py  bench_prepare_fixture.py  bench_strengthen.py  hyperfine_compare.sh  live_matrix.sh  live_smoke.sh  mcp_list_tools.py  notion_mcp_common.py  notion_mcp_login.py
src/: config.rs  main.rs  notion.rs  output.rs
