[package]
name = "notioncli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A Rust CLI for the Notion API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/donutdaniel/notioncli"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
directories = "6"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "query", "rustls"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yaml_serde = "0.10"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
